--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adetola's Webpage</title>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <style>
-        /* Global Styles */
+        /* (Keep your original CSS here — unchanged) */
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -88,15 +89,17 @@
     <div class="intro">
         <h1>Airbus A380: The World's Largest Passenger Aircraft</h1>
     </div>
+
     <div class="container">
         <div class="column">
             <h2>About Me</h2>
-            <p>Hi, my name is Adetola, and I have a deep passion for technology and aviation. My journey has taken me through various industries—from agricultural economics to accounting, construction, and now cloud computing. While my professional focus is on cloud infrastructure, I have always been fascinated by aircraft engineering, particularly the Airbus A380.</p>
+            <p>Hi, my name is Adetola...</p>
             <h2>Why I Love the Airbus A380</h2>
-            <p>The Airbus A380 is the world's largest passenger aircraft, known for its double-deck design and advanced engineering. It can carry over 800 passengers and offers an unmatched flying experience. The level of precision and innovation required to build such an aircraft reminds me of the complexity of cloud computing—both involve intricate systems working together seamlessly.</p>
+            <p>The Airbus A380 is the world's largest passenger aircraft...</p>
             <h3>Here is Airbus A380 exterior look</h3>
             <img src="https://www.aerotime.aero/images/airbus_a380_taxiing_at_moscow_air_show_maks_2013-800x500.jpg" alt="Airbus A380 exterior look">
         </div>
+
         <div class="column">
             <h2>Classes on the Airbus A380</h2>
             <ul>
@@ -108,101 +111,107 @@
             <h3>Luxury menu with caviar in First Class</h3>
             <img src="https://media.istockphoto.com/id/2166281228/photo/luxury-passenger-menu-with-caviar-in-first-class-onboard-of-emirates-airbus-a380-airliner.jpg?s=1024x1024&w=is&k=20&c=QoydXVvAJvwh0RFBqNxBhMVBiC3uIB6GDB8ZL_u2FTg=" alt="Luxury menu in First Class">
         </div>
+
         <div class="column">
             <h2>Flight Status Check</h2>
-            <form>
+            <form id="flightForm">
                 <label for="flightNumber">Enter a Flight Number (e.g., BA123):</label>
                 <input type="text" id="flightNumber" placeholder="Flight Number">
-                <button type="button" onclick="getFlightStatus()">Check Status</button>
+                <button type="button" id="checkFlightBtn">Check Status</button>
                 <p class="response" id="flightStatusResponse"></p>
             </form>
 
             <h2>Share Your Thoughts</h2>
-            <form>
+            <form id="seenForm">
                 <label>Have you ever seen an Airbus A380?</label>
-                <input type="radio" name="seenA380" value="Yes" onclick="updateSeenResponse(this.value)"> Yes <br>
-                <input type="radio" name="seenA380" value="No" onclick="updateSeenResponse(this.value)"> No <br>
+                <input type="radio" name="seenA380" value="Yes"> Yes <br>
+                <input type="radio" name="seenA380" value="No"> No <br>
                 <p class="response" id="seenResponse"></p>
             </form>
-            <form>
+
+            <form id="whyFlyForm">
                 <label>Why would you like to fly in an Airbus A380?</label>
-                <textarea id="whyFly" oninput="showTyping('whyFlyResponse')"></textarea>
-                <button type="button" onclick="submitWhyFly()">Submit</button>
+                <textarea id="whyFly"></textarea>
+                <button type="button" id="submitWhyFly">Submit</button>
                 <p class="response" id="whyFlyResponse"></p>
             </form>
-            <form>
+
+            <form id="improvementForm">
                 <label>What improvement would you suggest for the Airbus A380?</label>
-                <textarea id="improvements" oninput="showTyping('improvementsResponse')"></textarea>
-                <button type="button" onclick="submitImprovements()">Submit</button>
+                <textarea id="improvements"></textarea>
+                <button type="button" id="submitImprovements">Submit</button>
                 <p class="response" id="improvementsResponse"></p>
             </form>
         </div>
     </div>
 
-    <!-- Learn More Section -->
     <div class="learn-more">
         <p>If you would like to know more about the Airbus A380, <a href="https://www.airbus.com/en/products-services/commercial-aircraft/passenger-aircraft/a380" target="_blank"><u>click here</u></a> to visit its official page.</p>
     </div>
 
     <script>
-        function updateSeenResponse(value) {
-            document.getElementById("seenResponse").textContent = value === "Yes" 
-                ? "It is great that you have seen the Airbus A380!" 
-                : "No worries! Hope you see one someday, it's a phenomenal aircraft.";
-        }
+        $(document).ready(function() {
+            // Seen A380 response
+            $('input[name="seenA380"]').click(function() {
+                const value = $(this).val();
+                const message = value === "Yes"
+                    ? "It is great that you have seen the Airbus A380!"
+                    : "No worries! Hope you see one someday, it's a phenomenal aircraft.";
+                $('#seenResponse').hide().text(message).fadeIn();
+            });
 
-        function showTyping(responseId) {
-            document.getElementById(responseId).textContent = "typing...";
-        }
+            // Typing feedback
+            $('#whyFly, #improvements').on('input', function() {
+                const targetId = $(this).attr('id') === 'whyFly' ? '#whyFlyResponse' : '#improvementsResponse';
+                $(targetId).text('typing...');
+            });
 
-        function submitWhyFly() {
-            let response = document.getElementById("whyFlyResponse");
-            let text = document.getElementById("whyFly").value.trim();
-            response.textContent = text ? "Great reason!" : "Please share your reason.";
-        }
+            // Submit why fly
+            $('#submitWhyFly').click(function() {
+                const text = $('#whyFly').val().trim();
+                $('#whyFlyResponse').hide().text(text ? "Great reason!" : "Please share your reason.").fadeIn();
+            });
 
-        function submitImprovements() {
-            let response = document.getElementById("improvementsResponse");
-            let text = document.getElementById("improvements").value.trim();
-            response.textContent = text ? "Thank you for your suggestion!" : "We’d love to hear your suggestions.";
-        }
+            // Submit improvements
+            $('#submitImprovements').click(function() {
+                const text = $('#improvements').val().trim();
+                $('#improvementsResponse').hide().text(text ? "Thank you for your suggestion!" : "We’d love to hear your suggestions.").fadeIn();
+            });
 
-        // Function to fetch flight status using AviationStack API
-        function getFlightStatus() {
-            var flightNumber = document.getElementById("flightNumber").value.trim();
-            var apiKey = "1aa4512585d12e9a481c999bd25bd827"; // Your AviationStack API key
+            // Flight status check
+            $('#checkFlightBtn').click(function() {
+                const flightNumber = $('#flightNumber').val().trim();
+                const responseBox = $('#flightStatusResponse');
+                const apiKey = "1aa4512585d12e9a481c999bd25bd827";
 
-            if (!flightNumber) {
-                document.getElementById("flightStatusResponse").textContent = "Please enter a flight number.";
-                return;
-            }
+                if (!flightNumber) {
+                    responseBox.text("Please enter a flight number.");
+                    return;
+                }
 
-            var url = `https://api.aviationstack.com/v1/flights?access_key=${apiKey}&flight_iata=${flightNumber}`;
+                const url = `https://api.aviationstack.com/v1/flights?access_key=${apiKey}&flight_iata=${flightNumber}`;
 
-            fetch(url)
-                .then(response => response.json())
-                .then(data => {
+                $.get(url, function(data) {
                     if (data.data && data.data.length > 0) {
-                        var flightData = data.data[0];
-                        var status = flightData.flight_status;
-                        var departure = flightData.departure.airport;
-                        var arrival = flightData.arrival.airport;
+                        const flight = data.data[0];
+                        const status = flight.flight_status;
+                        const departure = flight.departure.airport;
+                        const arrival = flight.arrival.airport;
 
-                        document.getElementById("flightStatusResponse").innerHTML = `
+                        responseBox.html(`
                             <h3>Flight Status for ${flightNumber}</h3>
                             <p>Status: ${status}</p>
                             <p>Departure Airport: ${departure}</p>
                             <p>Arrival Airport: ${arrival}</p>
-                        `;
+                        `).hide().fadeIn();
                     } else {
-                        document.getElementById("flightStatusResponse").textContent = "Flight not found. Please check the flight number and try again.";
+                        responseBox.text("Flight not found. Please check the flight number and try again.").hide().fadeIn();
                     }
-                })
-                .catch(error => {
-                    document.getElementById("flightStatusResponse").textContent = "Error fetching flight data.";
-                    console.error("Error:", error);
+                }).fail(function() {
+                    responseBox.text("Error fetching flight data.").hide().fadeIn();
                 });
-        }
+            });
+        });
     </script>
 </body>
 </html>
