--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
     <div class="container">
         <div class="column">
             <h2>About Me</h2>
-            <p>Hi, my name is Adetola...</p>
+            <p>Hi, my name is Adetola, and I have a deep passion for technology and aviation. My journey has taken me through various industries—from agricultural economics to accounting, construction, and now cloud computing. While my professional focus is on cloud infrastructure, I have always been fascinated by aircraft engineering, particularly the Airbus A380.</p>
             <h2>Why I Love the Airbus A380</h2>
-            <p>The Airbus A380 is the world's largest passenger aircraft...</p>
+            <p>The Airbus A380 is the world's largest passenger aircraft, known for its double-deck design and advanced engineering. It can carry over 800 passengers and offers an unmatched flying experience. The level of precision and innovation required to build such an aircraft reminds me of the complexity of cloud computing—both involve intricate systems working together seamlessly.</p>
             <h3>Here is Airbus A380 exterior look</h3>
             <img src="https://www.aerotime.aero/images/airbus_a380_taxiing_at_moscow_air_show_maks_2013-800x500.jpg" alt="Airbus A380 exterior look">
         </div>
